// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ssr: Self closing - html 1`] = `"<input type="text" />"`;

exports[`ssr: Self closing - svg 1`] = `"<polygon points="0,100 50,25 50,75 100,0" />"`;

exports[`ssr: Falsey - undefined 1`] = `"<div></div>"`;

exports[`ssr: Falsey - null 1`] = `"<div></div>"`;

exports[`ssr: Falsey - false 1`] = `"<div></div>"`;

exports[`ssr: Not really Falsey - "" 1`] = `"<div></div>"`;

exports[`ssr: Not really Falsey - 0 1`] = `"<div>0</div>"`;

exports[`ssr: Not really Falsey - NaN 1`] = `"<div>NaN</div>"`;

exports[`ssr: Bad template - NaN 1`] = `"<div></div>"`;

exports[`ssr: Conditional 1`] = `"<div>hello</div>"`;

exports[`ssr: Style attribute 1`] = `"<div style="background-color:blue; margin:12px; --cssVar:red;">styles</div>"`;

exports[`ssr: p-trigger attribute 1`] = `"<div p-trigger="click:random focus:thing">triggers</div>"`;

exports[`ssr: Array of templates 1`] = `
"<ul>
    <li>0</li>
    <li>1</li>
    <li>2</li>
    <li>3</li>
    <li>4</li>
    <li>5</li>
    <li>6</li>
    <li>7</li>
    <li>8</li>
    <li>9</li>
</ul>"
`;

exports[`ssr: Should not throw on script tag with trusted attribute 1`] = `"<script type="module" src="main.js"></script>"`;

exports[`ssr: Escapes children 1`] = `
"<div>&lt;script type=&quot;text/javascript&quot;&gt; const hostRegex = /^https?://([^/]+)/.*$/i;
    const host = document.URL.replace(hostRegex, &#39;$1&#39;); const socket
    = new WebSocket(/); const reload = () =&gt;{ location.reload(); console.log(&#39;...reloading&#39;);
    }; socket.addEventListener(&#39;message&#39;, reload); console.log(&#39;[plaited]
    listening for file changes&#39;); &lt;/script&gt;</div>"
`;

exports[`ssr: Does not escape children when trusted 1`] = `
"<div>
    <script type="text/javascript">
        const hostRegex = /^https?://([^/]+)/.*$/i;
        const host = document.URL.replace(hostRegex, '$1');
        const socket = new WebSocket(/);
        const reload = () =>{
          location.reload();
          console.log('...reloading');
        };
        socket.addEventListener('message', reload);
        console.log('[plaited] listening for file changes');
    </script>
</div>"
`;

exports[`ssr: Non declarative shadow DOM template 1`] = `
"<ul>
    <template><span>I am a span!!!</span>
    </template>
    <li>item-0</li>
    <li>item-1</li>
    <li>item-2</li>
    <li>item-3</li>
    <li>item-4</li>
    <li>item-5</li>
    <li>item-6</li>
    <li>item-7</li>
    <li>item-8</li>
    <li>item-9</li>
</ul>"
`;

exports[`Fragment 1`] = `
"<li>In 5</li>
<li>In 4</li>
<li>In 3</li>
<li>In 2</li>
<li>In 1</li>
<li>Blast Off!!!</li>"
`;

exports[`createTemplate: Trims whitespace 1`] = `"<div>trims white-space</div>"`;

exports[`ssr: CustomElement hoisting its styles 1`] = `
{
  "content": 
"<nested-element>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-element>"
,
  "stylesheets": [],
}
`;

exports[`ssr: CustomElement with declarative shadow dom & hoist styles 1`] = `
{
  "content": 
"<style>
    .cls_dqiix{display:flex;}.cls_13vh1nn{flex-direction:column;}
</style>
<nested-element class="nestedElement cls_dqiix cls_13vh1nn">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-element>"
,
  "stylesheets": [
    ".cls_dqiix{display:flex;}",
    ".cls_13vh1nn{flex-direction:column;}",
  ],
}
`;

exports[`ssr: CustomElement with styled slotted element 1`] = `
{
  "content": 
"<style>
    .cls_1v0nksu{color:rebeccapurple;}
</style>
<nested-element class="slottedParagraph cls_1v0nksu">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
    <p slot="nested">slotted paragraph</p>
</nested-element>"
,
  "stylesheets": [
    ".cls_1v0nksu{color:rebeccapurple;}",
  ],
}
`;

exports[`ssr: CustomElement with declarative shadow dom and nested declarative shadow dom 1`] = `
{
  "content": 
"<top-element>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-element class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-element>
    </template>
</top-element>"
,
  "stylesheets": [],
}
`;

exports[`ssr: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles 1`] = `
{
  "content": 
"<style>
    .cls_qt6ejx{display:block;}
</style>
<top-element class="topElement cls_qt6ejx">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-element class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-element>
    </template>
</top-element>"
,
  "stylesheets": [
    ".cls_qt6ejx{display:block;}",
  ],
}
`;

exports[`ssr: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles and child 1`] = `
{
  "content": 
"<style>
    .cls_2h7uhvs{width:100%;}.cls_16johir{aspect-ratio:16 / 9;}.cls_qt6ejx{display:block;}
</style>
<top-element class="topElement cls_qt6ejx">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-element class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-element>
    </template>
    <img class="image cls_2h7uhvs cls_16johir" />
</top-element>"
,
  "stylesheets": [
    ".cls_2h7uhvs{width:100%;}",
    ".cls_16johir{aspect-ratio:16 / 9;}",
    ".cls_qt6ejx{display:block;}",
  ],
}
`;
